ecoM06_ecoM06A-exemploTrabalhoParte02/okaheads.output
Terminals unused in grammar

   COMMA
   GQ
   '%'


Grammar

    0 $accept: programa $end

    1 programa: lista_comando

    2 lista_comando: comando EOL lista_comando
    3              | comando EOL

    4 bloco: OPEN_BLOCK EOL lista_comando CLOSE_BLOCK

    5 ident: ID

    6 exp: NUMREAL
    7    | NUMINTEIRO
    8    | STRING
    9    | ident
   10    | soma
   11    | subtracao
   12    | divisao
   13    | multiplicacao

   14 atribuicao: REAL ident '=' exp
   15           | INT ident '=' exp
   16           | CHAR ident '=' exp

   17 comando: atribuicao
   18        | bloco
   19        | if_comando
   20        | while_comando

   21 comparacao: igualdade
   22           | diferenca

   23 soma: exp '+' exp

   24 subtracao: exp '-' exp

   25 divisao: exp '/' exp

   26 multiplicacao: exp '*' exp

   27 igualdade: exp EQ exp

   28 diferenca: exp NE exp

   29 if_comando: IF OPEN_BRACE comparacao CLOSE_BRACE bloco
   30           | IF OPEN_BRACE comparacao CLOSE_BRACE bloco ELSE bloco

   31 while_comando: WHILE OPEN_BRACE comparacao CLOSE_BRACE bloco


Terminals, with rules where they appear

$end (0) 0
'%' (37)
'*' (42) 26
'+' (43) 23
'-' (45) 24
'/' (47) 25
'=' (61) 14 15 16
error (256)
IF (258) 29 30
ELSE (259) 30
WHILE (260) 31
ID (261) 5
NUMINTEIRO (262) 7
NUMREAL (263) 6
STRING (264) 8
EOL (265) 2 3 4
INT (266) 15
REAL (267) 14
CHAR (268) 16
OPEN_BRACE (269) 29 30 31
CLOSE_BRACE (270) 29 30 31
OPEN_BLOCK (271) 4
CLOSE_BLOCK (272) 4
COMMA (273)
EQ (274) 27
GQ (275)
NE (276) 28


Nonterminals, with rules where they appear

$accept (28)
    on left: 0
programa (29)
    on left: 1, on right: 0
lista_comando (30)
    on left: 2 3, on right: 1 2 4
bloco (31)
    on left: 4, on right: 18 29 30 31
ident (32)
    on left: 5, on right: 9 14 15 16
exp (33)
    on left: 6 7 8 9 10 11 12 13, on right: 14 15 16 23 24 25 26 27
    28
atribuicao (34)
    on left: 14 15 16, on right: 17
comando (35)
    on left: 17 18 19 20, on right: 2 3
comparacao (36)
    on left: 21 22, on right: 29 30 31
soma (37)
    on left: 23, on right: 10
subtracao (38)
    on left: 24, on right: 11
divisao (39)
    on left: 25, on right: 12
multiplicacao (40)
    on left: 26, on right: 13
igualdade (41)
    on left: 27, on right: 21
diferenca (42)
    on left: 28, on right: 22
if_comando (43)
    on left: 29 30, on right: 19
while_comando (44)
    on left: 31, on right: 20


state 0

    0 $accept: . programa $end

    IF          shift, and go to state 1
    WHILE       shift, and go to state 2
    INT         shift, and go to state 3
    REAL        shift, and go to state 4
    CHAR        shift, and go to state 5
    OPEN_BLOCK  shift, and go to state 6

    programa       go to state 7
    lista_comando  go to state 8
    bloco          go to state 9
    atribuicao     go to state 10
    comando        go to state 11
    if_comando     go to state 12
    while_comando  go to state 13


state 1

   29 if_comando: IF . OPEN_BRACE comparacao CLOSE_BRACE bloco
   30           | IF . OPEN_BRACE comparacao CLOSE_BRACE bloco ELSE bloco

    OPEN_BRACE  shift, and go to state 14


state 2

   31 while_comando: WHILE . OPEN_BRACE comparacao CLOSE_BRACE bloco

    OPEN_BRACE  shift, and go to state 15


state 3

   15 atribuicao: INT . ident '=' exp

    ID  shift, and go to state 16

    ident  go to state 17


state 4

   14 atribuicao: REAL . ident '=' exp

    ID  shift, and go to state 16

    ident  go to state 18


state 5

   16 atribuicao: CHAR . ident '=' exp

    ID  shift, and go to state 16

    ident  go to state 19


state 6

    4 bloco: OPEN_BLOCK . EOL lista_comando CLOSE_BLOCK

    EOL  shift, and go to state 20


state 7

    0 $accept: programa . $end

    $end  shift, and go to state 21


state 8

    1 programa: lista_comando .

    $default  reduce using rule 1 (programa)


state 9

   18 comando: bloco .

    $default  reduce using rule 18 (comando)


state 10

   17 comando: atribuicao .

    $default  reduce using rule 17 (comando)


state 11

    2 lista_comando: comando . EOL lista_comando
    3              | comando . EOL

    EOL  shift, and go to state 22


state 12

   19 comando: if_comando .

    $default  reduce using rule 19 (comando)


state 13

   20 comando: while_comando .

    $default  reduce using rule 20 (comando)


state 14

   29 if_comando: IF OPEN_BRACE . comparacao CLOSE_BRACE bloco
   30           | IF OPEN_BRACE . comparacao CLOSE_BRACE bloco ELSE bloco

    ID          shift, and go to state 16
    NUMINTEIRO  shift, and go to state 23
    NUMREAL     shift, and go to state 24
    STRING      shift, and go to state 25

    ident          go to state 26
    exp            go to state 27
    comparacao     go to state 28
    soma           go to state 29
    subtracao      go to state 30
    divisao        go to state 31
    multiplicacao  go to state 32
    igualdade      go to state 33
    diferenca      go to state 34


state 15

   31 while_comando: WHILE OPEN_BRACE . comparacao CLOSE_BRACE bloco

    ID          shift, and go to state 16
    NUMINTEIRO  shift, and go to state 23
    NUMREAL     shift, and go to state 24
    STRING      shift, and go to state 25

    ident          go to state 26
    exp            go to state 27
    comparacao     go to state 35
    soma           go to state 29
    subtracao      go to state 30
    divisao        go to state 31
    multiplicacao  go to state 32
    igualdade      go to state 33
    diferenca      go to state 34


state 16

    5 ident: ID .

    $default  reduce using rule 5 (ident)


state 17

   15 atribuicao: INT ident . '=' exp

    '='  shift, and go to state 36


state 18

   14 atribuicao: REAL ident . '=' exp

    '='  shift, and go to state 37


state 19

   16 atribuicao: CHAR ident . '=' exp

    '='  shift, and go to state 38


state 20

    4 bloco: OPEN_BLOCK EOL . lista_comando CLOSE_BLOCK

    IF          shift, and go to state 1
    WHILE       shift, and go to state 2
    INT         shift, and go to state 3
    REAL        shift, and go to state 4
    CHAR        shift, and go to state 5
    OPEN_BLOCK  shift, and go to state 6

    lista_comando  go to state 39
    bloco          go to state 9
    atribuicao     go to state 10
    comando        go to state 11
    if_comando     go to state 12
    while_comando  go to state 13


state 21

    0 $accept: programa $end .

    $default  accept


state 22

    2 lista_comando: comando EOL . lista_comando
    3              | comando EOL .

    IF          shift, and go to state 1
    WHILE       shift, and go to state 2
    INT         shift, and go to state 3
    REAL        shift, and go to state 4
    CHAR        shift, and go to state 5
    OPEN_BLOCK  shift, and go to state 6

    $default  reduce using rule 3 (lista_comando)

    lista_comando  go to state 40
    bloco          go to state 9
    atribuicao     go to state 10
    comando        go to state 11
    if_comando     go to state 12
    while_comando  go to state 13


state 23

    7 exp: NUMINTEIRO .

    $default  reduce using rule 7 (exp)


state 24

    6 exp: NUMREAL .

    $default  reduce using rule 6 (exp)


state 25

    8 exp: STRING .

    $default  reduce using rule 8 (exp)


state 26

    9 exp: ident .

    $default  reduce using rule 9 (exp)


state 27

   23 soma: exp . '+' exp
   24 subtracao: exp . '-' exp
   25 divisao: exp . '/' exp
   26 multiplicacao: exp . '*' exp
   27 igualdade: exp . EQ exp
   28 diferenca: exp . NE exp

    EQ   shift, and go to state 41
    NE   shift, and go to state 42
    '-'  shift, and go to state 43
    '+'  shift, and go to state 44
    '*'  shift, and go to state 45
    '/'  shift, and go to state 46


state 28

   29 if_comando: IF OPEN_BRACE comparacao . CLOSE_BRACE bloco
   30           | IF OPEN_BRACE comparacao . CLOSE_BRACE bloco ELSE bloco

    CLOSE_BRACE  shift, and go to state 47


state 29

   10 exp: soma .

    $default  reduce using rule 10 (exp)


state 30

   11 exp: subtracao .

    $default  reduce using rule 11 (exp)


state 31

   12 exp: divisao .

    $default  reduce using rule 12 (exp)


state 32

   13 exp: multiplicacao .

    $default  reduce using rule 13 (exp)


state 33

   21 comparacao: igualdade .

    $default  reduce using rule 21 (comparacao)


state 34

   22 comparacao: diferenca .

    $default  reduce using rule 22 (comparacao)


state 35

   31 while_comando: WHILE OPEN_BRACE comparacao . CLOSE_BRACE bloco

    CLOSE_BRACE  shift, and go to state 48


state 36

   15 atribuicao: INT ident '=' . exp

    ID          shift, and go to state 16
    NUMINTEIRO  shift, and go to state 23
    NUMREAL     shift, and go to state 24
    STRING      shift, and go to state 25

    ident          go to state 26
    exp            go to state 49
    soma           go to state 29
    subtracao      go to state 30
    divisao        go to state 31
    multiplicacao  go to state 32


state 37

   14 atribuicao: REAL ident '=' . exp

    ID          shift, and go to state 16
    NUMINTEIRO  shift, and go to state 23
    NUMREAL     shift, and go to state 24
    STRING      shift, and go to state 25

    ident          go to state 26
    exp            go to state 50
    soma           go to state 29
    subtracao      go to state 30
    divisao        go to state 31
    multiplicacao  go to state 32


state 38

   16 atribuicao: CHAR ident '=' . exp

    ID          shift, and go to state 16
    NUMINTEIRO  shift, and go to state 23
    NUMREAL     shift, and go to state 24
    STRING      shift, and go to state 25

    ident          go to state 26
    exp            go to state 51
    soma           go to state 29
    subtracao      go to state 30
    divisao        go to state 31
    multiplicacao  go to state 32


state 39

    4 bloco: OPEN_BLOCK EOL lista_comando . CLOSE_BLOCK

    CLOSE_BLOCK  shift, and go to state 52


state 40

    2 lista_comando: comando EOL lista_comando .

    $default  reduce using rule 2 (lista_comando)


state 41

   27 igualdade: exp EQ . exp

    ID          shift, and go to state 16
    NUMINTEIRO  shift, and go to state 23
    NUMREAL     shift, and go to state 24
    STRING      shift, and go to state 25

    ident          go to state 26
    exp            go to state 53
    soma           go to state 29
    subtracao      go to state 30
    divisao        go to state 31
    multiplicacao  go to state 32


state 42

   28 diferenca: exp NE . exp

    ID          shift, and go to state 16
    NUMINTEIRO  shift, and go to state 23
    NUMREAL     shift, and go to state 24
    STRING      shift, and go to state 25

    ident          go to state 26
    exp            go to state 54
    soma           go to state 29
    subtracao      go to state 30
    divisao        go to state 31
    multiplicacao  go to state 32


state 43

   24 subtracao: exp '-' . exp

    ID          shift, and go to state 16
    NUMINTEIRO  shift, and go to state 23
    NUMREAL     shift, and go to state 24
    STRING      shift, and go to state 25

    ident          go to state 26
    exp            go to state 55
    soma           go to state 29
    subtracao      go to state 30
    divisao        go to state 31
    multiplicacao  go to state 32


state 44

   23 soma: exp '+' . exp

    ID          shift, and go to state 16
    NUMINTEIRO  shift, and go to state 23
    NUMREAL     shift, and go to state 24
    STRING      shift, and go to state 25

    ident          go to state 26
    exp            go to state 56
    soma           go to state 29
    subtracao      go to state 30
    divisao        go to state 31
    multiplicacao  go to state 32


state 45

   26 multiplicacao: exp '*' . exp

    ID          shift, and go to state 16
    NUMINTEIRO  shift, and go to state 23
    NUMREAL     shift, and go to state 24
    STRING      shift, and go to state 25

    ident          go to state 26
    exp            go to state 57
    soma           go to state 29
    subtracao      go to state 30
    divisao        go to state 31
    multiplicacao  go to state 32


state 46

   25 divisao: exp '/' . exp

    ID          shift, and go to state 16
    NUMINTEIRO  shift, and go to state 23
    NUMREAL     shift, and go to state 24
    STRING      shift, and go to state 25

    ident          go to state 26
    exp            go to state 58
    soma           go to state 29
    subtracao      go to state 30
    divisao        go to state 31
    multiplicacao  go to state 32


state 47

   29 if_comando: IF OPEN_BRACE comparacao CLOSE_BRACE . bloco
   30           | IF OPEN_BRACE comparacao CLOSE_BRACE . bloco ELSE bloco

    OPEN_BLOCK  shift, and go to state 6

    bloco  go to state 59


state 48

   31 while_comando: WHILE OPEN_BRACE comparacao CLOSE_BRACE . bloco

    OPEN_BLOCK  shift, and go to state 6

    bloco  go to state 60


state 49

   15 atribuicao: INT ident '=' exp .
   23 soma: exp . '+' exp
   24 subtracao: exp . '-' exp
   25 divisao: exp . '/' exp
   26 multiplicacao: exp . '*' exp

    '-'  shift, and go to state 43
    '+'  shift, and go to state 44
    '*'  shift, and go to state 45
    '/'  shift, and go to state 46

    $default  reduce using rule 15 (atribuicao)


state 50

   14 atribuicao: REAL ident '=' exp .
   23 soma: exp . '+' exp
   24 subtracao: exp . '-' exp
   25 divisao: exp . '/' exp
   26 multiplicacao: exp . '*' exp

    '-'  shift, and go to state 43
    '+'  shift, and go to state 44
    '*'  shift, and go to state 45
    '/'  shift, and go to state 46

    $default  reduce using rule 14 (atribuicao)


state 51

   16 atribuicao: CHAR ident '=' exp .
   23 soma: exp . '+' exp
   24 subtracao: exp . '-' exp
   25 divisao: exp . '/' exp
   26 multiplicacao: exp . '*' exp

    '-'  shift, and go to state 43
    '+'  shift, and go to state 44
    '*'  shift, and go to state 45
    '/'  shift, and go to state 46

    $default  reduce using rule 16 (atribuicao)


state 52

    4 bloco: OPEN_BLOCK EOL lista_comando CLOSE_BLOCK .

    $default  reduce using rule 4 (bloco)


state 53

   23 soma: exp . '+' exp
   24 subtracao: exp . '-' exp
   25 divisao: exp . '/' exp
   26 multiplicacao: exp . '*' exp
   27 igualdade: exp EQ exp .

    '-'  shift, and go to state 43
    '+'  shift, and go to state 44
    '*'  shift, and go to state 45
    '/'  shift, and go to state 46

    $default  reduce using rule 27 (igualdade)


state 54

   23 soma: exp . '+' exp
   24 subtracao: exp . '-' exp
   25 divisao: exp . '/' exp
   26 multiplicacao: exp . '*' exp
   28 diferenca: exp NE exp .

    '-'  shift, and go to state 43
    '+'  shift, and go to state 44
    '*'  shift, and go to state 45
    '/'  shift, and go to state 46

    $default  reduce using rule 28 (diferenca)


state 55

   23 soma: exp . '+' exp
   24 subtracao: exp . '-' exp
   24          | exp '-' exp .
   25 divisao: exp . '/' exp
   26 multiplicacao: exp . '*' exp

    '*'  shift, and go to state 45
    '/'  shift, and go to state 46

    $default  reduce using rule 24 (subtracao)


state 56

   23 soma: exp . '+' exp
   23     | exp '+' exp .
   24 subtracao: exp . '-' exp
   25 divisao: exp . '/' exp
   26 multiplicacao: exp . '*' exp

    '*'  shift, and go to state 45
    '/'  shift, and go to state 46

    $default  reduce using rule 23 (soma)


state 57

   23 soma: exp . '+' exp
   24 subtracao: exp . '-' exp
   25 divisao: exp . '/' exp
   26 multiplicacao: exp . '*' exp
   26              | exp '*' exp .

    $default  reduce using rule 26 (multiplicacao)


state 58

   23 soma: exp . '+' exp
   24 subtracao: exp . '-' exp
   25 divisao: exp . '/' exp
   25        | exp '/' exp .
   26 multiplicacao: exp . '*' exp

    $default  reduce using rule 25 (divisao)


state 59

   29 if_comando: IF OPEN_BRACE comparacao CLOSE_BRACE bloco .
   30           | IF OPEN_BRACE comparacao CLOSE_BRACE bloco . ELSE bloco

    ELSE  shift, and go to state 61

    $default  reduce using rule 29 (if_comando)


state 60

   31 while_comando: WHILE OPEN_BRACE comparacao CLOSE_BRACE bloco .

    $default  reduce using rule 31 (while_comando)


state 61

   30 if_comando: IF OPEN_BRACE comparacao CLOSE_BRACE bloco ELSE . bloco

    OPEN_BLOCK  shift, and go to state 6

    bloco  go to state 62


state 62

   30 if_comando: IF OPEN_BRACE comparacao CLOSE_BRACE bloco ELSE bloco .

    $default  reduce using rule 30 (if_comando)
